# compv

./: .gitignore  AStyle.sh  CMakeLists.txt  CMakeSettings.json  CompV.vcxproj  CompV.vcxproj.filters  README.md  arch.cmake  building_ffmpeg.txt  building_sdl.txt  building_skia.txt  cmakegen_ios.sh  cmakegen_jetson_arm64.bat  cmakegen_linux_arm32.bat  cmakegen_linux_arm64.bat  cmakegen_rpi.bat  cmakegen_win64.bat  common.cmake  compv.sln  compv_array.cxx  compv_bits.cxx  compv_box.cxx  compv_buffer.cxx  compv_common.cxx  compv_convlt.cxx  compv_cpu.cxx  compv_debug.cxx  compv_engine.cxx  compv_fileutils.cxx  compv_gauss.cxx  compv_hamming.cxx  compv_interestpoint.cxx  compv_list.cxx  compv_math.cxx  compv_math_trig.cxx  compv_math_utils.cxx  compv_mathutils.cxx  compv_md5.cxx  compv_mem.cxx  compv_obj.cxx  (+17 more)
base/: CMakeLists.txt  CompVBase.Items.vcxitems  CompVBase.Items.vcxitems.filters  CompVBase.sln  CompVBase.vcxproj  CompVBase.vcxproj.filters  compv_android_cpu-features.cxx  compv_autolock.cxx  compv_base.cxx  compv_base64.cxx  compv_bind.cxx  compv_bits.cxx  compv_box.cxx  compv_box_interestpoint.cxx  compv_buffer.cxx  compv_canvas.cxx  compv_caps.cxx  compv_ccl.cxx  compv_common.cxx  compv_cpu.cxx  compv_debug.cxx  compv_dlmalloc.c  compv_exif.cxx  compv_features.cxx  compv_fileutils.cxx  compv_gradient_fast.cxx  compv_jni.cxx  compv_json.cxx  compv_kernel.cxx  compv_lock.cxx  compv_mat.cxx  compv_matchers.cxx  compv_md5.cxx  compv_mem.cxx  compv_mem_pool_light.cxx  compv_obj.cxx  compv_patch.cxx  compv_points_transform.cxx  compv_sharedlib.cxx  compv_simd_globals.cxx  (+4 more)
base/CompVBase.xcodeproj/: project.pbxproj
base/android/: compv_android_cpu-features.cxx  compv_android_dexclassloader.cxx  compv_android_native_activity.cxx
base/drawing/: compv_canvas.cxx  compv_mvp.cxx  compv_renderer.cxx  compv_surface.cxx  compv_surfacelayer.cxx  compv_surfacelayer_matching.cxx  compv_surfacelayer_multi.cxx  compv_surfacelayer_single.cxx  compv_viewport.cxx  compv_window.cxx  compv_window_registry.cxx
base/easyexif/: easyexif.cxx
base/image/: compv_image.cxx  compv_image_conv_common.cxx  compv_image_conv_hsv.cxx  compv_image_conv_rgbfamily.cxx  compv_image_conv_to_grayscale.cxx  compv_image_conv_to_rgb24.cxx  compv_image_conv_to_rgb32.cxx  compv_image_conv_to_rgba32.cxx  compv_image_conv_to_rgbx.cxx  compv_image_conv_to_yuv444p.cxx  compv_image_decoder.cxx  compv_image_integral.cxx  compv_image_libjpeg.cxx  compv_image_remap.cxx  compv_image_scale_bicubic.cxx  compv_image_scale_bilinear.cxx  compv_image_scale_pyramid.cxx  compv_image_threshold.cxx  compv_image_utils.cxx
base/jsoncpp-1.8.4/: jsoncpp.cxx
base/math/: compv_math.cxx  compv_math_activation_functions.cxx  compv_math_basic_ops.cxx  compv_math_cast.cxx  compv_math_clip.cxx  compv_math_convlt.cxx  compv_math_distance.cxx  compv_math_dot.cxx  compv_math_eigen.cxx  compv_math_exp.cxx  compv_math_gauss.cxx  compv_math_histogram.cxx  compv_math_matrix.cxx  compv_math_moments.cxx  compv_math_morph.cxx  compv_math_op_add.cxx  compv_math_op_minmax.cxx  compv_math_op_mul.cxx  compv_math_op_sub.cxx  compv_math_pca.cxx  compv_math_scale.cxx  compv_math_stats.cxx  compv_math_stats_fit.cxx  compv_math_stats_ransac.cxx  compv_math_transform.cxx  compv_math_trig.cxx  compv_math_utils.cxx
base/ml/: compv_base_ml_knn.cxx  compv_base_ml_svm.cxx  compv_base_ml_svm_predict.cxx
base/parallel/: compv_asynctask10.cxx  compv_asynctask11.cxx  compv_condvar.cxx  compv_mutex.cxx  compv_parallel.cxx  compv_parallel_asm_armv7.cxx  compv_runnable.cxx  compv_semaphore.cxx  compv_thread.cxx  compv_threaddisp.cxx  compv_threaddisp10.cxx  compv_threaddisp11.cxx  compv_threaddisp_native.cxx  compv_threaddisptbb.cxx
base/pugixml-1.9/: pugixml.cxx
base/pugixml-120/: xml.cxx
base/tbbmalloc/: Customize.h  backend.cpp  backref.cpp  frontend.cpp  large_objects.cpp  proxy.h  tbbmalloc.cpp  tbbmalloc_internal.h
base/time/: compv_time.cxx  compv_timer.cxx
base/video/: compv_video_reader.cxx
base/vs_android/: CompVBase.sln  CompVBase.vcxproj  CompVBase.vcxproj.filters
base/zlib-1.2.8/: zlib.c
camera/: CMakeLists.txt  CompVCamera.Items.vcxitems  CompVCamera.Items.vcxitems.filters  CompVCamera.sln  CompVCamera.vcxproj  CompVCamera.vcxproj.filters  compv_camera.cxx
camera/android/: compv_camera_android.cxx
camera/vs_android/: CompVCamera.vcxproj  CompVCamera.vcxproj.filters
core/: CMakeLists.txt  CompVCore.vcxproj  CompVCore.vcxproj.filters  compv_core.cxx  compv_core_box_interestpoint.cxx  compv_core_simd_globals.cxx
deprecated/: ragel.sh  (+25 more)
drawing/: CMakeLists.txt  CompVDrawing.Items.vcxitems  CompVDrawing.Items.vcxitems.filters  CompVDrawing.sln  CompVDrawing.vcxproj  CompVDrawing.vcxproj.filters  compv_canvas.cxx  compv_canvas_skia.cxx  compv_drawing.cxx  compv_drawing_canvas_skia.cxx  compv_drawing_factory.cxx  compv_drawing_image_libjpeg.cxx  compv_drawing_window_egl.cxx  compv_drawing_window_egl_android.cxx  compv_drawing_window_glfw3.cxx  compv_drawing_window_sdl.cxx  compv_image_libjpeg.cxx  compv_mvp.cxx  compv_program.cxx  compv_renderer.cxx  compv_surface.cxx  compv_surfacelayer.cxx  compv_surfacelayer_matching.cxx  compv_surfacelayer_multi.cxx  compv_surfacelayer_single.cxx  compv_utils_gl.cxx  compv_viewport.cxx  compv_window.cxx  compv_window_egl.cxx  compv_window_egl_android.cxx  compv_window_glfw3.cxx  compv_window_sdl.cxx
gl/: CMakeLists.txt  CompVGL.Items.vcxitems  CompVGL.Items.vcxitems.filters  CompVGL.sln  CompVGL.vcxproj  CompVGL.vcxproj.filters  compv_gl.cxx  compv_gl_blitter.cxx  compv_gl_canvas.cxx  compv_gl_context.cxx  compv_gl_fbo.cxx  compv_gl_freetype.cxx  compv_gl_info.cxx  compv_gl_mvp.cxx  compv_gl_program.cxx  compv_gl_renderer.cxx  compv_gl_renderer_packed.cxx  compv_gl_renderer_planar.cxx  compv_gl_renderer_rgb.cxx  compv_gl_renderer_yuv.cxx  compv_gl_surface.cxx  compv_gl_surfacelayer_matching.cxx  compv_gl_surfacelayer_multi.cxx  compv_gl_surfacelayer_single.cxx  compv_gl_utils.cxx  compv_gl_vao.cxx  compv_gl_window.cxx
gpu/: CMakeLists.txt  CompVGPU.vcxproj  CompVGPU.vcxproj.filters  compv_gpu.cxx
(+2547 files in other folders)
